<resources>
    <string name="app_name">My Account</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="ajouter">Ajouter</string>
    <string name="title">Title</string>
    <string name="amount">Amount(€)</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="author"><![CDATA[Fang & Ma]]></string>
    <string name="details">Details</string>
    <string name="charts">Chart</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="data"><![CDATA[Personal data & privacy]]></string>
    <string name="security">Security</string>
    <string name="signup"><![CDATA[Sign up & Login]]></string>
    <string name="export">Export my bill</string>
    <string name="delete">Delete all data</string>
    <string name="pin">Require PIN on startup</string>
    <string name="faceid">Require Face ID on startup</string>
    <string name="ok">OK</string>
    <string-array name="category_arrays">
        <item></item>
        <item>Food</item>
        <item>Shopping</item>
        <item>Transport</item>
        <item>Housing</item>
    </string-array>

    <string-array name="year_arrays">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>


    <string-array name="month_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
